[gd_scene load_steps=2 format=3 uid="uid://milestone_slot"]

[ext_resource type="Script" path="res://scripts/milestone_slot.gd" id="1_ms"]

[node name="MilestoneSlot" type="Panel"]
custom_minimum_size = Vector2(70, 90)
script = ExtResource("1_ms")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RequirementLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_font_sizes/font_size = 11
text = "T? R?"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 10
text = "Empty"
horizontal_alignment = 1

[node name="CardDisplay" type="Panel" parent="VBox"]
visible = false
custom_minimum_size = Vector2(50, 55)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBox" type="VBoxContainer" parent="VBox/CardDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TierLabel" type="Label" parent="VBox/CardDisplay/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "TI"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="VBox/CardDisplay/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "R1"
horizontal_alignment = 1

[node name="DropIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.6, 0.2, 0.5)
